# IMGuiWinAppFramework

./: .gitignore  .gitmodules  CMakeLists.txt  remainder.md
ImGuiApp/: CMakeLists.txt
ImGuiApp/example/: ImGuiDemoWindow.cpp
ImGuiApp/include/ImApp/: ImGuiWinApp.h
ImGuiApp/include/ImApp/ImGuiBackend/: ImGuiBackend.h
ImGuiApp/include/ImApp/Theme/: Spectrum.h
ImGuiApp/src/: ImGuiWinApp.cpp
ImGuiApp/src/Glad/: GladImpVulkan.cpp
ImGuiApp/src/ImGuiBackend/: ImGuiBackendD3d11.cpp  ImGuiBackendD3d11.h  ImGuiBackendOpenGL.cpp  ImGuiBackendOpenGL.h  ImGuiBackendVulkan.cpp  ImGuiBackendVulkan.h
ImGuiApp/src/ImGuiBackend/Vulkan/: VulkanInclude.h  VulkanUtil.cpp  VulkanUtil.h
ImGuiApp/src/Theme/: Spectrum.cpp
NativeWindow/: CMakeLists.txt
NativeWindow/include/NativeWindow/: Window.h  WindowState.h
NativeWindow/src/NativeWindow/: Resource.cpp  Window.cpp
example/: ImGuiDemoWindow.cpp  Main.cpp
include/ImApp/: ImGuiComponent.h  ImGuiWinApp.h
include/ImApp/Component/: Button.h  Component.h  ComponentContainer.h  HorizontalLayout.h  SameLine.h  Text.h  VerticalLayout.h  Window.h
include/ImApp/Font/: JetBrainsMono-Bold.h  JetBrainsMono-Regular.h
include/ImApp/ImGuiBackend/: ImGuiBackend.h  ImGuiBackendType.h
include/ImApp/NativeWindow/: FileDialog.h  Keyboard.h  Mouse.h  Window.h  WindowEvent.h  WindowState.h  WindowStyle.h
include/ImApp/Theme/: Spectrum.h
include/ImApp/Utility/: Color.h
include/ImGuiWinAppFramework/: ImGuiWinApp.h
include/ImGuiWinAppFramework/Font/: JetBrainsMono-Bold.h  JetBrainsMono-Regular.h
src/: ImGuiComponent.cpp  ImGuiWinApp.cpp
src/Component/: Button.cpp  Component.cpp  ComponentContainer.cpp  HorizontalLayout.cpp  SameLine.cpp  Text.cpp  VerticalLayout.cpp  Window.cpp
src/Framework/ImGui1.90.5/backends/: imgui_impl_opengl2.cpp  imgui_impl_sdl3.cpp
src/ImGuiBackend/: ImGuiBackend.cpp  ImGuiBackendD3d11.cpp  ImGuiBackendD3d11.h  ImGuiBackendOpenGL.cpp  ImGuiBackendOpenGL.h  ImGuiBackendVulkan.cpp  ImGuiBackendVulkan.h
src/ImGuiWinApp/: AppWindow.cpp  AppWindow.h  Application.cpp  Application.h  FontResource.h  IWinMsgReceiver.h  ImGuiLogic.cpp  ImGuiLogic.h  ImGuiRender.cpp  ImGuiRender.h  Util.hpp  WinWindow.cpp  WinWindow.h
src/NativeWinApp/: FileDialog.cpp  Keyboard.cpp  Mouse.cpp  Resource.cpp  Utility.cpp  Window.WndProc.cpp  Window.cpp
src/NativeWindow/: FileDialog.cpp  Keyboard.cpp  Mouse.cpp  NativeWindowUtility.cpp  NativeWindowUtility.h  Resource.cpp  Window.WndProc.cpp  Window.cpp
src/NativeWindow/Glad/: Gl.cpp
src/Theme/: SansPro-Regular.h  Spectrum.cpp
src/Utility/: Color.cpp  String.cpp
test/: NativeWindowTest.cpp
